syntax="proto3";
package proto;
option go_package="./;proto";

import "google/protobuf/empty.proto";

service User {

  // CreateUser...
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc GetUserLoginStatus (google.protobuf.Empty) returns (UserLoginStatusResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
  rpc ChangePassword (ChangePasswordRequest) returns (ChangePasswordResponse);
  rpc SearchUser (SearchUserRequest) returns (SearchUserResponse);
  rpc UserLogin  (UserLoginRequest) returns (UserLoginResponse);
  rpc ForceLogout(ForceLogoutRequest) returns (ForceLogoutResponse);
  rpc GetUserRoles(google.protobuf.Empty) returns (GetRolesResponse);
  rpc EditUser(EditUserRequest) returns (EditUserResponse);
  rpc GetUserById(GetUserByIdRequest) returns(GetUserByIdResponse);
  rpc GetUserAssignment(UserAssignmentRequest) returns (UserAssignmentResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc GetSplashConfig(SplashConfigRequest) returns (SplashConfigResponse);
  rpc VersionUpdater(VersionUpdaterRequest) returns (VersionUpdaterResponse);
  rpc GetFleetTypes(google.protobuf.Empty) returns (GetFleetTypesResponse);
  rpc AddFleetTypes(AddFleetTypesRequest) returns (AddFleetTypesResponse);
}

// ChangePassword...
message ChangePasswordRequest {
  string old_password = 1;
  string new_password = 2;
}
message ChangePasswordResponse {
  string message = 1;
}

message userAssignmentItem {
  int64  id_user=1;
  int64  location_id=2;
  int64  sub_location=3;
  string sub_location_name = 4;
  string location_name = 5;
}
message CreateUserRequest {
  int64 id=1;
  int64 user_role=2;
  string username =3;
  string name=4;
  string created_at=5;
  string modified_at=6;
  string deleted_by=7;
  string created_by=8;
  string modified_by=9;
  string password=10;
  string email=11;
  repeated userAssignmentItem user_assignment=12;
  bool is_airport=13;
  int64 fleet_type = 14;
}

message CreateUserResponse {
  int64 id=1;
  string username =2;
  string created_at=3;
  string created_by=4;
}

message UserLoginStatusItem {
  int64  id=1;
  string username=2;
  string status=3;
}

message UserLoginStatusResponse {
  int64 count=1;
  repeated UserLoginStatusItem users=2;
}

message DeleteUserRequest {
  string UUID=1;
  int64 deleted_by=2;
}
message DeleteUserResponse {
  string message=1;
}

// Get User role...
message RolesItem {
  int64 id=1;
  string rolename=2;
}
message GetRolesResponse {
  repeated RolesItem role_items=1;
}

// SearchUser...
message SearchUserRequest {
  string username=1;
}

message SearchUserItems {
  int64  id=1;
  string username=2;
  string uuid=3;
  string status =4;
}

message SearchUserResponse {
  repeated SearchUserItems search_result =1;
}

// User Login
message UserLoginRequest{
  string username=1;
  string password=2;
  int64 fleet_type = 3;
}

message UserLoginResponse{
  string message =1;
  int64  user_id =2;
  int64  expires_in=3;
  string uuid = 4;
  string access_token=5;
  string user_role=6;
  int64  location_id = 7;
  string refresh_token = 8;
  string firebase_token = 9;
  bool is_airport = 10;
  int64 fleet_type = 11;
  string type_name = 12;
}

// Force logout
message ForceLogoutRequest {
  string UUID = 1;
}
message ForceLogoutResponse {
  string message = 1;
}

// Edit User....
message EditUserRequest {
  int64  user_id =1;
  string username =2;
  string old_password =3;
  string new_password =4;
  string email=5;
  int64  role_id =6;
  int64  modified_by=7;
  repeated userAssignmentItem user_assignment=8;
}
message EditUserResponse {
  string message =1;
}

// GetUserById....
message GetUserByIdRequest {
  int64 user_id =1;
}

message GetUserByIdResponse {
  int64  user_id=1;
  string username =2;
  string name=3;
  string created_at=4;
  string created_by=5;
  int64  user_role=6;
  repeated userAssignmentItem user_assignment=7;
  string email = 8;
}

// [BDO 130] GetUserAssignment ...
message UserAssignmentRequest {
  int64 user_id=1;
}
message AssignmentLocationItems {
  int64 sub_location_id=1;
  string sub_location_name=2;
  bool  is_deposition = 3;
  int64 location_id = 4;
}

message UserAssignmentResponse {
  repeated AssignmentLocationItems sub_location_items = 1;
  string area_code = 2;
  bool is_airport = 3;
}
message RefreshTokenRequest {
  string refresh_token = 1;
  string uuid  = 2;
}

message RefreshTokenResponse {
  string message =1;
  int64  user_id =2;
  int64  expires_in=3;
  string uuid = 4;
  string access_token=5;
  string user_role=6;
  int64  location_id = 7;
  string refresh_token = 8;
}

message SplashConfigRequest{
  string key =1;
}

message SplashConfigResponse{
  string play_store_url =1;
  int64 version_code =2;
  string version_name =3;
  string cs_phone_number =4;
}

// [BDO 403].....
message VersionUpdaterRequest {
  string version_key = 1;
  int64 version_code = 2;
  string version_name = 3;
  string cs_phone_number = 4;
}

message VersionUpdaterResponse{
  string message = 1;
  int64 version_code = 2;
  string version_name = 3;
  string cs_phone_number = 4;
}

// BDO 405 GetFleetTypesResponse...
message FleetTypeItems{
  int64 id = 1;
  string type_name = 2;
}

message GetFleetTypesResponse {
  repeated FleetTypeItems fleet_types = 1;
}

message AddFleetTypesRequest {
  string type_name = 1;
}
message AddFleetTypesResponse {
  int64 id = 1;
  string type_name = 2;
}
